--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,40 +1,18 @@
 <resources>
     <string name="app_name">ShopCourse</string>
 
-    <!-- Title section -->
     <string name="onboarding_title_line1">Тысячи курсов</string>
     <string name="onboarding_title_line2">в одном месте</string>
-
-    <!-- Row 1 courses -->
-    <string name="course_administration">С Администрирование</string>
-    <string name="badge_rabbitmq">RabbitMQ</string>
-
-    <!-- Row 2 courses -->
-    <string name="course_marketing">ИТ маркетинг</string>
-    <string name="course_b2b_marketing">B2B маркетинг</string>
-    <string name="course_google_analytics">Google Anal</string>
-
-    <!-- Row 3 courses -->
-    <string name="course_researcher">Бизнес исследователь</string>
-    <string name="course_web_analytics">Веб-аналитика</string>
-    <string name="badge_big_data">Big Data</string>
-
-    <!-- Row 4 courses -->
-    <string name="course_design">Веб-дизайн</string>
-    <string name="course_cinema4d">Cinema 4D</string>
-    <string name="course_prompt_engineering">Промпт ин</string>
-
-    <!-- Row 5 courses -->
-    <string name="badge_three_js">Three.js</string>
-    <string name="course_parsing">Парсинг</string>
-    <string name="course_python">Python-разр</string>
-
-    <!-- Buttons -->
     <string name="button_continue">Продолжить</string>
 
-    <!-- Status bar -->
-    <string name="time_placeholder">9:30</string>
-    <string name="signal_strength">Сигнал сети</string>
-    <string name="wifi_status">WiFi статус</string>
-    <string name="battery_status">Статус батареи</string>
+    <string name="registration_title">Регистрация</string>
+    <string name="email_hint">example@gmail.com</string>
+    <string name="password_hint">Введите пароль</string>
+    <string name="confirm_password_hint">Введите пароль ещё раз</string>
+    <string name="email_label">Email</string>
+    <string name="password_label">Пароль</string>
+    <string name="confirm_password_label">Повторить пароль</string>
+    <string name="register_button">Регистрация</string>
+    <string name="already_have_account">Уже есть аккаунт?</string>
+    <string name="login">Войти</string>
 </resources>
