--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="favourites">Избранное</string>
     <string name="account">Аккаунт</string>
     <string name="learn_more">Подробнее</string>
+    <string name="favorites">Избранное</string>
 </resources>
